Closed
Bug 733951
Opened 9 years ago
Closed 9 years ago
Qt port does not compile anymore due to bad includes order
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla13
People
(Reporter: romaxa, Assigned: romaxa)
References
(Blocks 1 open bug)
Details
Attachments
(2 files, 1 obsolete file)
1.33 KB,
patch
|
jrmuizel
:
review+
|
Details | Diff | Splinter Review |
1.96 KB,
patch
|
Details | Diff | Splinter Review |
Attempt to compile m-c, fail for Qt port N9 phone GLContextProviderEGL.cpp c++ -o GLContextProviderEGL.o -c -fvisibility=hidden -DMOZ_GLUE_IN_PROGRAM -DMOZILLA_INTERNAL_API -D_IMPL_NS_COM -DEXPORT_XPT_API -DEXPORT_XPTC_API -D_IMPL_NS_GFX -D_IMPL_NS_WIDGET -DIMPL_XREAPI -DIMPL_NS_NET -DIMPL_THEBES -DSTATIC_EXPORTABLE_JS_API -DOSTYPE=\"Linux2.6\" -DOSARCH=Linux -Igfx/gl -I. -I../../dist/include -I../../dist/include/nsprpub -Iobj-build/dist/include/nspr -Iobj-build/dist/include/nss -fPIC -frtti -pedantic -Wall -Wpointer-arith -Woverloaded-virtual -Wsynth -Wno-ctor-dtor-privacy -Wno-non-virtual-dtor -Wno-invalid-offsetof -Wno-variadic-macros -Werror=return-type -Wno-long-long -fno-exceptions -fno-strict-aliasing -std=gnu++0x -pthread -ffunction-sections -fdata-sections -pipe -DNDEBUG -DTRIMMED -gdwarf-2 -O3 -g -fomit-frame-pointer -Iobj-build/dist/include/cairo -DQT_SHARED -I/usr/include/meegotouch -I/usr/include/qt4 -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -DQT_SHARED -I/usr/include/qt4 -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtOpenGL -DQT_SHARED -I/usr/include/qmsystem2 -I/usr/include/qt4 -I/usr/include/qt4/QtCore -I/usr/include/qt4/QtMobility -I/usr/include/qt4/QtSensors -I/usr/include/qt4/QtFeedback -I/usr/include/qt4/QtLocation -DMOZILLA_CLIENT -include ../../mozilla-config.h -MD -MF .deps/GLContextProviderEGL.pp gfx/gl/GLContextProviderEGL.cpp In file included from /usr/include/qt4/QtCore/qstring.h:46, from /usr/include/qt4/QtCore/qobject.h:48, from /usr/include/qt4/QtGui/qwidget.h:46, from /usr/include/qt4/QtOpenGL/qgl.h:45, from /usr/include/qt4/QtOpenGL/QGLContext:1, from gfx/gl/GLContextProviderEGL.cpp:52: /usr/include/qt4/QtCore/qbytearray.h:370: error: macro "realloc" requires 2 arguments, but only 1 given /usr/include/qt4/QtCore/qbytearray.h:418: error: macro "realloc" requires 2 arguments, but only 1 given /usr/include/qt4/QtCore/qbytearray.h:432: error: macro "realloc" requires 2 arguments, but only 1 given /usr/include/qt4/QtCore/qbytearray.h:435: error: macro "realloc" requires 2 arguments, but only 1 given
Assignee | ||
Comment 1•9 years ago
|
||
Assignee | ||
Updated•9 years ago
|
Attachment #603911 -
Flags: review? → review?(jmuizelaar)
Assignee | ||
Comment 2•9 years ago
|
||
Problem similar to problem in bug 587715
Attachment #603911 -
Attachment is obsolete: true
Attachment #604498 -
Flags: review?(jmuizelaar)
Attachment #603911 -
Flags: review?(jmuizelaar)
Comment 3•9 years ago
|
||
Comment on attachment 604498 [details] [diff] [review] Move nsI and moz_malloc wrapper includes after Qt includes Please, add a comment to the Qt includes about the ordering dependency.
Attachment #604498 -
Flags: review?(jmuizelaar) → review+
Assignee | ||
Comment 4•9 years ago
|
||
Comment 5•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/2eacd5a91b5f
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
You need to log in
before you can comment on or make changes to this bug.
Description
•