Bug 733951 - Qt port does not compile anymore due to bad includes order. r=jrmuizel